--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: linear-gradient(120deg, #e2c35d, #d88771);
+    background-image: linear-gradient(120deg, #157a6e, #ACE894 );
     color: white;
     font-family: "Poppins", sans-serif;
     min-height: 100vh;
