--- a/styles.css
+++ b/styles.css
@@ -32,13 +32,13 @@ form button {
 }
 
 form button {
-    color: #d88771;
+    color: #157a6e;
     background-color: white;
     cursor: pointer;
     transition: all 0.3s ease;
 }
 
 form button:hover {
-    background-color: #d88771;
+    background-color: #157a6e;
     color: white;
 }
