--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,14 @@ form button:hover {
 
 .trash-btn,
 .complete-btn {
-    background: #58C92C;
+    background: #098650;
     color: white;
+    border: none;
+    padding: 1rem;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+.trash-btn {
+    background: #FF7708;
 }
