--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,11 @@
 }
 
 body {
-    background-image: linear-gradient(120deg, #157a6e, #ACE894 );
+    background-image: linear-gradient(120deg, #157a6e, #ACE894);
     color: white;
     font-family: "Poppins", sans-serif;
     min-height: 100vh;
 }
-
-/* Introduction */
 
 header {
     font-size: 1.5rem;
@@ -24,8 +22,6 @@ form {
     justify-content: center;
     align-items: center;
 }
-
-/* Todo submition */
 
 form input,
 form button {
@@ -47,8 +43,6 @@ form button:hover {
     color: white;
 }
 
-/* The Todo Items*/
-
 .todo-container {
     display: flex;
     justify-content: center;
@@ -68,6 +62,7 @@ form button:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    transition: all 0.5s ease;
 }
 
 .todo li {
@@ -92,8 +87,6 @@ form button:hover {
     padding: 0rem 0.5rem;
 }
 
-/* Todo actions */
-
 .fa-trash,
 .fa-check {
     pointer-events: none;
@@ -108,8 +101,6 @@ form button:hover {
     transform: translateY(8rem) rotateZ(20deg);
     opacity: 0;
 }
-
-/* Select Filter Stylings*/
 
 select {
     -webkit-appearance: none;
